fix button alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -413,7 +413,7 @@ img{
     /* display: inline-block; */
     /* background-color: var(--first-color); */
     color: #FFF;
-    padding: 1rem;
+    padding-top: 1rem;
     /* border-radius: .5rem; */
     font-weight: var(--font-medium);
 }
